Added picture of album with link to music video

--- a/lyrics.html
+++ b/lyrics.html
@@ -9,6 +9,10 @@
   <h4>The Way Life Goes</h4>
   <h6>By: LIL UZI VERT</h6>
   <a href="https://www.youtube.com/watch?v=sRXCPIMqzyU" target="_blank">Link to Song </a>
+  <br>
+  <a href="https://www.youtube.com/watch?v=sRXCPIMqzyU" target="_blank">
+    <img src="images/waylifegoes.jpeg">
+  </a>
 
   <hr>
   <br>
